<resources>
    <string name="app_name">Pizza</string>
    <string name="name_pizza">Точка</string>
    <string name="registration">Зареєструйтеся</string>
    <string name="hint_phone">Ведіть номер телефона</string>
    <string name="start_button">Війти</string>
    <string name="id_account">Назва акаунта</string>
    <string name="find_food">Пошук по назві страви</string>
    <string name="quick_delivery">Швидка доставка</string>
    <string name="categories">Категорії:</string>
    <string name="populars">Популярні:</string>
    <string name="home">Головна</string>
    <string name="profile">Профіль</string>
    <string name="support">Підтримка</string>
    <string name="settings">Налаштунок</string>
    <string name="cat1">Піца</string>
    <string name="cat2">Роли</string>
    <string name="cat3">Сети</string>
    <string name="cat4">Салат</string>
    <string name="cat5">Суп</string>
    <string name="cat6">Соус</string>
    <string name="cat7">Десерт</string>
    <string name="cat8">Напій</string>
    <string name="add">Додати</string>
    <string name="description">Опис</string>
    <string name="add_cart_btn">Додати в кошик</string>
    <string name="my_cart">Кошик продуктів</string>
    <string name="items_total">Всього продуктів:</string>
    <string name="delivery_services">Послуги доставки:</string>
    <string name="tax">Таксі:</string>
    <string name="all">Всього:</string>
    <string name="check_out">Здійснити замовлення</string>
    <string name="empty">Ваш кошик пустий</string>
    <string name="many">грн.</string>
    <string name="all_many">Всього грн.</string>
    <string name="tittle">Назва</string>
    <string name="price">0</string>
    <string name="salad1_title"><b>Курячі стріпси — 140 г</b></string>
    <string name="salad1_description"><b>Склад:</b> Філе куряче, Сіль, Перець, Борошно, Яйце, Панко,
        Соус медово-гірчичний</string>
    <string name="salad2_title"><b>Моцарелла фрі — 150 г</b></string>
    <string name="salad2_description"><b>Склад:</b> Сир моцарелла, Панко, Яйце, Соус смородиновий</string>
    <string name="salad3_title"><b>Рис з креветкою — 300 г</b></string>
    <string name="salad3_description"><b>Склад:</b> Рис паровий, Креветка тигрова, Яйце, Кунжут,
        Хондаші, Кунжутне масло,
        Соєвий соус, Цибуля зелена</string>
    <string name="salad4_title"><b>Рис з куркою — 300 г</b></string>
    <string name="salad4_description"><b>Склад:</b> Рис паровий, Філе куряче, Яйце, Кунжут, Хондаші,
        Кунжутне масло,
        Соєвий соус, Цибуля зелена</string>
    <string name="salad5_title"><b>Рисова локшина з куркою — 260 г</b></string>
    <string name="salad5_description"><b>Склад:</b> Локшина рисова, Філе куряче, Перець болгарський,
        Цибуля ріпчаста, Морква
        Цибуля зелена, Соус Устричний</string>
    <string name="salad6_title"><b>Рисова локшина з море продуктами — 300 г</b></string>
    <string name="salad6_description"><b>Склад:</b> Рисова локшина, Брокколі, Морква, Спаржа,
        Креветка кокт, Мідії, Кальмар,
        Цибуля зелена, Шрірача, Соус для локшини</string>
    <string name="salad7_title"><b>Рисова локшина з овочами — 250 г</b></string>
    <string name="salad7_description"><b>Склад:</b> Рисова локшина, Перець болшарський, Цибуля
        рібчаста, Морква,
        Цибуля зелена, Соус Устрічний, Брокколі</string>
    <string name="salad8_title"><b>Рисова локшина з телятиною — 260 г</b></string>
    <string name="salad8_description"><b>Склад:</b> Рисова локшина, Телятина, Перець болшарський,
        Цибуля рібчаста, Морква,
        Цибуля зелена, Соус Азіатський</string>
    <string name="salad9_title"><b>Рисові чіпси — 50 г</b></string>
    <string name="salad9_description"></string>
    <string name="salad10_title"><b>Салат з креветкою — 130 г</b></string>
    <string name="salad10_description"><b>Склад:</b> Мікс салату, Соус шоу мірін, Конжут чорний,
        Креветка темпура</string>
    <string name="salad11_title"><b>Салат тайський — 170 г</b></string>
    <string name="salad11_description"><b>Склад:</b> Мікс салату, Помідор, Куряча стріпла, Соус
        медово-гірчичний</string>
    <string name="salad12_title"><b>Салат хіяші — 110 г</b></string>
    <string name="salad12_description"><b>Склад:</b> Хіяші, Кунжут, Соус горіховий</string>
    <string name="salad13_title"><b>Удон з куркою — 270 г</b></string>
    <string name="salad13_description"><b>Склад:</b> Удон, Філе куряче, Перець болгарський, Цибуля
        ріпчаста, Морква,
    Брокколі, Соус устрічний</string>
    <string name="salad14_title"><b>Удон з морепродуктами — 300 г</b></string>
    <string name="salad14_description"><b>Склад:</b> Удон, Спаржа, Креветка, Мідії, Кальмар, Цибуля
        зелена, Морква,
    Брокколі, Соус устрічний, Соус Азіатський</string>
    <string name="salad15_title"><b>Удон з овочами — 250 г</b></string>
    <string name="salad15_description"><b>Склад:</b> Удон, Перець болгарський, Цибуля ріпчаста,
        Морква, Цибуля зелена,
    Брокколі, Соус устрічний</string>
    <string name="salad16_title"><b>Удон з телятиною — 270 г</b></string>
    <string name="salad16_description"><b>Склад:</b> Удон, Телятина, Перець болгарський, Цибуля
        ріпчаста, Морква,
    Брокколі, Соус Азіатський</string>
    <string name="dessert1_title"><b>Моті банан шоколад</b></string>
    <string name="dessert1_description">Японський десерт Банан в шоколаді</string>
    <string name="dessert2_title"><b>Моті гранат з медом — 42 г</b></string>
    <string name="dessert2_description">Японський десерт гранат з медом</string>
    <string name="dessert3_title"><b>Моті маракуя — 42 г</b></string>
    <string name="dessert3_description">Японський десерт Маракуйя</string>
    <string name="addition1_title"><b>Авокадо доповнення — 25 г</b></string>
    <string name="addition1_description"><b>Склад:</b> Авокадо — 25 г</string>
    <string name="addition2_title"><b>Васабі — 5 г</b></string>
    <string name="addition2_description"></string>
    <string name="addition3_title"><b>Імбір — 7 г</b></string>
    <string name="addition3_description"></string>
    <string name="addition4_title"><b>Сир філадельфія доповнення — 20 г</b></string>
    <string name="addition4_description"><b>Склад:</b> Сир філадельфія — 20 г</string>
    <string name="addition5_title"><b>Соєвий соус доповнення — 40 г</b></string>
    <string name="addition5_description"><b>Склад:</b> Соєвий соус — 40 г</string>
    <string name="addition6_title"><b>Соус горіховий доповнення — 30 г</b></string>
    <string name="addition6_description"><b>Склад:</b> Соус горіховий — 30 г</string>
    <string name="addition7_title"><b>Соус унагі доповнення — 20 г</b></string>
    <string name="addition7_description"><b>Склад:</b> Соус унагі — 20 г</string>
    <string name="baked_rolls1_title"><b>Ніжний з вугрем — 255 г 8 шт</b></string>
    <string name="baked_rolls1_description"><b>Склад:</b> Рис, Норі, Сир філадельфія, Сирний заміс,
        Айсберг, Унагі</string>
    <string name="baked_rolls2_title"><b>Ніжний з крабом — 255 г 8 шт</b></string>
    <string name="baked_rolls2_description"><b>Склад:</b> Рис, Норі, Сир філадельфія, Крабовий мікс,
        Айсберг, Унагі</string>
    <string name="baked_rolls3_title"><b>Ніжний з куркою — 265 г 8 шт</b></string>
    <string name="baked_rolls3_description"><b>Склад:</b> Рис, Норі, Сир філадельфія, Куряче філе
        смажене, Айсберг, Унагі</string>
    <string name="baked_rolls4_title"><b>Ніжний з лососем — 255 г 8 шт</b></string>
    <string name="baked_rolls4_description"><b>Склад:</b> Рис, Норі, Сир філадельфія, Лосось, Айсберг,
        Унагі</string>
    <string name="baked_rolls5_title"><b>Ніжний з сиром — 235 г 8 шт</b></string>
    <string name="baked_rolls5_description"><b>Склад:</b> Рис, Норі, Сир філадельфія, Сирний заміс,
        Айсберг, Унагі</string>
    <string name="baked_rolls6_title"><b>Окінава — 255 г 8 шт</b></string>
    <string name="baked_rolls6_description"><b>Склад:</b> Рис, Норі, Сир філадельфія, Масаго, Лосось,
        Огірок, Сирний заміс</string>
    <string name="baked_rolls7_title"><b>Фуджі — 220 г 8 шт</b></string>
    <string name="baked_rolls7_description"><b>Склад:</b> Рис, Норі, Сир філадельфія, Вугор, Сирний
        заміс</string>
    <string name="drinks1_title"><b>Бонаква</b></string>
    <string name="drinks1_description"><b>Склад:</b> Без газу</string>
    <string name="drinks2_title"><b>Бонаква газована</b></string>
    <string name="drinks2_description"><b>Склад:</b> Без газована</string>
    <string name="drinks3_title"><b>Кола 0,5</b></string>
    <string name="drinks3_description"></string>
    <string name="drinks4_title"><b>Лимонад імбірний</b></string>
    <string name="drinks4_description"></string>
    <string name="drinks5_title"><b>Морс ягідний</b></string>
    <string name="drinks5_description"></string>
    <string name="pizza1_title"><b>Піца 4 м\'яса — 450 г</b></string>
    <string name="pizza1_description"><b>Склад:</b> Соус томатний, Сир моцарела, Пепероні, Ветчина,
        Охотнічі ковбаски,
    Куряча грудка, Помідори черрі /n
        <b>Основа:</b> Крафтове борошно, Пшеничне борошно, Закваска, Оливкова олія, Цукор, Сіль, Вода
    </string>
    <string name="pizza2_title"><b>Піца 4 сезони — 470 г</b></string>
    <string name="pizza2_description"><b>Склад:</b> Соус томатний, Моцарелла терта, Цибуля червона,
        Куряча грудка,
        Гриби, Пепероні, Мисливські ковбаски, Шинка, Кукурудза /n
        <b>Основа:</b> Крафтове борошно, Пшеничне борошно, Закваска, Оливкова олія, Цукор, Сіль, Вода
    </string>
    <string name="pizza3_title"><b>Піца 4 сира — 440 г</b></string>
    <string name="pizza3_description"><b>Склад:</b> Моцарелла, Сир Дор Блю, Сир Чердер слайс, Сир
        Фета, Вершковий соус /n
        <b>Основа:</b> Крафтове борошно, Пшеничне борошно, Закваска, Оливкова олія, Цукор, Сіль, Вода
    </string>
    <string name="pizza4_title"><b>Піца Асорті — 500 г</b></string>
    <string name="pizza4_description"><b>Склад:</b>Шинка, Сир моцарелла, Мисливські ковбаски,
        Печериці, Томати, Кукурудза, Томатний соус /n
        <b>Основа:</b> Крафтове борошно, Пшеничне борошно, Закваска, Оливкова олія, Цукор, Сіль, Вода
    </string>
    <string name="pizza5_title"><b>Піца Гавайська — 480 г</b></string>
    <string name="pizza5_description"><b>Склад:</b> Моцарела, Копчена курка, Ананас, Вершковий соус /n
        <b>Основа:</b> Крафтове борошно, Пшеничне борошно, Закваска, Оливкова олія, Цукор, Сіль, Вода
    </string>
    <string name="pizza6_title"><b>Піца дитяча — 470 г</b></string>
    <string name="pizza6_description"><b>Склад:</b> Моцарела, Копчена курка, Томатний соус /n
        <b>Основа:</b> Крафтове борошно, Пшеничне борошно, Закваска, Оливкова олія, Цукор, Сіль, Вода
    </string>
    <string name="pizza7_title"><b>Піца з куркою та грибами — 450 г</b></string>
    <string name="pizza7_description"><b>Склад:</b> Куряча грудка, Сир моцарела, Червона цибуля,
        Печериці, Вершковий соус /n
        <b>Основа:</b> Крафтове борошно, Пшеничне борошно, Закваска, Оливкова олія, Цукор, Сіль, Вода
    </string>
    <string name="pizza8_title"><b>Піца курка та сир — 420 г</b></string>
    <string name="pizza8_description"><b>Склад:</b> Сир моцарела, Куряча грудка, Вершковий соус,
        кукурудза, Сир Чеддр слайс /n
        <b>Основа:</b> Крафтове борошно, Пшеничне борошно, Закваска, Оливкова олія, Цукор, Сіль, Вода
    </string>
    <string name="pizza9_title"><b>Піца куряча — 410 г</b></string>
    <string name="pizza9_description"><b>Склад:</b> Моцарела, куряче філе, Червона цибуля, Крем сир /n
        <b>Основа:</b> Крафтове борошно, Пшеничне борошно, Закваска, Оливкова олія, Цукор, Сіль, Вода
    </string>
    <string name="pizza10_title"><b>Піца маргарита — 350 г</b></string>
</resources>